[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "historic_crypto"
version = "1.0"
authors = [
    {name = "Nikhil Razab-Sekh", email = "nikhil@technative.eu"}
]
description = "A fork of the well established historic crypto repo"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas"
]